добавлена ии ассистент

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="logo">🔷</div>
 
     <nav class="nav">
-        <a href="#">Университет</a>
+        <a href="#">О нас</a>
         <a href="#">Поступающим</a>
-        <a href="#">Студентам</a>
-        <a href="#">Выпускникам</a>
+        <a href="#">Библиотека</a>
+        <a href="#">Контакты</a>
     </nav>
 
     <div class="search">
@@ -28,9 +28,11 @@
 
 
 <section class="hero">
-    <h1>название уника</h1>
-    <p>3д вид универа с улицы</p>
+    <h1>TURAN</h1>
+    <img src="" alt="">
+    <a href="https://vrmir3d.com/TuranEdu_3/">
     <button class="btn">3D-Тур</button>
+    </a>
 </section>
 
 
