Добавлен минимальный дизайн и карта

--- a/index.html
+++ b/index.html
@@ -53,20 +53,17 @@
     <h2>ОБУЧЕНИЕ</h2>
 
     <div class="cards">
-        <div class="card">
+        <a href="#" class="card">
             <h3>БАКАЛАВРИАТ</h3>
             <p>МИНИИ ИНФА</p>
-        </div>
-
-        <div class="card">
-            <h3>МАГИСТРАТУРА</h3>
+        </a>
+        
+        <a href="#" class="card">
+            <h3>Студенческие организации</h3>
             <p>МИНИИ ИНФА</p>
-        </div>
+        </a>
 
-        <div class="card">
-            <h3>ДОКТОРАНТУРА</h3>
-            <p>МИНИИ ИНФА</p>
-        </div>
+        
     </div>
 </section>
 
@@ -85,5 +82,25 @@
     </div>
 </section>
 
+
+<section class="learning">
+    <h2>Гранты и скидки</h2>
+
+    <div class="cards">
+        <div class="card">
+            <h3>Государственные гранты</h3>
+        </div>
+
+        <div class="card">
+            <h3>Скидки по итогам ЕНТ</h3>
+        </div>
+
+        <div class="card">
+            <h3>Внутренний образовательный грант<br> «ТҰРАН ҮМІТІ»</h3>
+        </div>
+    </div>
+</section>
+
+<img src="https://static.maps.2gis.com/1.0?s=880x380&c=43.23737560527554,76.94038672438384&z=17" alt="">
 </body>
 </html>
